# django-asset-manager

./: .gitignore  flake.nix  pyproject.toml
src/asset_manager/: conf.py  utils.py
src/asset_manager/management/commands/: run_npm_install.py
src/asset_manager/staticfiles/: finders.py
src/asset_manager/templatetags/: asset_manager.py
src/django_node_loader/: __init__.py  conf.py
src/django_node_loader/management/commands/: run_npm_install.py
src/django_node_loader/staticfiles/: finders.py
src/node_loader/: conf.py
src/node_loader/management/commands/: run_npm_install.py
src/node_loader/staticfiles/: finders.py
tests/: conftest.py  settings.py  test_conf.py
