[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-node-loader"
version = "0.1.0"
description = "Django app for managing assets using npm packages."
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Mugdha Arunim Ahmed", email = "mugshaarunimahmed2017@gmail.com" },
]
requires-python = ">=3.8,<3.13"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
]
keywords = ["django", "static"]
dependencies = [
  "django>=4.2; python_version < '3.10'",
  "django>=5; python_version >= '3.10'",
]

[tool.uv]
dev-dependencies = ["django-stubs>=5.0.4", "ruff>=0.6.4"]

[tool.basedpyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
exclude = [".venv"]

[tool.ruff]
extend-exclude = ["**/migrations/**/*.py"]
preview = true
respect-gitignore = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
  "I",
  "N",
  "UP",
  "ASYNC",
  "C4",
  "T10",
  "DJ",
  "EM",
  "PIE",
  "T20",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "PTH",
  "TD",
  "FIX",
  "ERA",
  "PL",
  "TRY",
  "PERF",
  "FURB",
  "RUF",
]
ignore = []

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["django"]
known-local-folder = ["django_node_loader"]
